projects/los-business/loan/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loan
  name: loan-svc
  namespace: los-business-dev
spec:
  ports:
    - port: 8905
      protocol: TCP
      targetPort: 8905
  selector:
    app: loan
